--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 	},
 	"require": {
 		"php": ">=7.4.3",
-		"wikimedia/utfnormal": "^1.1.0 || ^2.0.0 || ^3.0.1 || ^4.0.0"
+		"wikimedia/utfnormal": "^3.0.1 || ^4.0.0"
 	},
 	"require-dev": {
 		"ext-json": "*",
