--- a/composer.json
+++ b/composer.json
@@ -29,17 +29,17 @@
 	},
 	"require-dev": {
 		"ext-json": "*",
-		"mediawiki/mediawiki-codesniffer": "41.0.0",
-		"mediawiki/mediawiki-phan-config": "0.12.1",
+		"mediawiki/mediawiki-codesniffer": "42.0.0",
+		"mediawiki/mediawiki-phan-config": "0.13.0",
 		"mediawiki/minus-x": "1.1.1",
 		"mikey179/vfsstream": "^1.6",
 		"ockcyp/covers-validator": "1.6.0",
 		"php-parallel-lint/php-console-highlighter": "1.0.0",
 		"php-parallel-lint/php-parallel-lint": "1.3.2",
 		"phpunit/phpunit": "9.5.28",
-		"rregeer/phpunit-coverage-check": "~0.1.4",
-		"symfony/console": "^3.3 || ^4 || ^5",
-		"symfony/var-dumper": "^3.3 || ^4 || ^5"
+		"rregeer/phpunit-coverage-check": "~0.3.1",
+		"symfony/console": "^3.3 || ^4 || ^5 || ^6",
+		"symfony/var-dumper": "^3.3 || ^4 || ^5 || ^6"
 	},
 	"scripts": {
 		"test": [
