Add remaining letters from "Latin Extended Additional" unicode block
Map the letters to its base letter

Bug: T357855
Change-Id: I8d488bc8ba176936d6100ebce2feb9b52433631a

--- a/data/equivset.in
+++ b/data/equivset.in
@@ -1488,8 +1488,26 @@ F0C ༌ => F0B ་
 # https://www.unicode.org/charts/PDF/U1E00.pdf
 1E00 Ḁ => 41 A
 1E01 ḁ => 1E00 Ḁ
+1E02 Ḃ => 42 B
+1E03 ḃ => 1E02 Ḃ
+1E04 Ḅ => 42 B
+1E05 ḅ => 1E04 Ḅ
+1E06 Ḇ => 42 B
+1E07 ḇ => 1E06 Ḇ
+1E08 Ḉ => C7 Ç
+1E09 ḉ => 1E08 Ḉ
+1E0A Ḋ => 44 D
+1E0B ḋ => 1E0A Ḋ
 1E0C Ḍ => 44 D
 1E0D ḍ => 1E0C Ḍ
+1E0E Ḏ => 44 D
+1E0F ḏ => 1E0E Ḏ
+1E10 Ḑ => 44 D
+1E11 ḑ => 1E10 Ḑ
+1E12 Ḓ => 44 D
+1E13 ḓ => 1E12 Ḓ
+1E14 Ḕ => 112 Ē
+1E15 ḕ => 1E14 Ḕ
 1E16 Ḗ => C9 É
 1E17 ḗ => 1E16 Ḗ
 1E18 Ḙ => 45 E
@@ -1498,6 +1516,8 @@ F0C ༌ => F0B ་
 1E1B ḛ => 1E1A Ḛ
 1E1C Ḝ => 114 Ĕ
 1E1D ḝ => 1E1C Ḝ
+1E1E Ḟ => 46 F
+1E1F ḟ => 1E1E Ḟ
 1E20 Ḡ => 47 G
 1E21 ḡ => 1E20 Ḡ
 1E22 Ḣ => 48 H
@@ -1510,18 +1530,46 @@ F0C ༌ => F0B ་
 1E29 ḩ => 1E28 Ḩ
 1E2A Ḫ => 48 H
 1E2B ḫ => 1E2A Ḫ
+1E2C Ḭ => 49 I
+1E2D ḭ => 1E2C Ḭ
+1E2E Ḯ => CF Ï
+1E2F ḯ => 1E2E Ḯ
+1E30 Ḱ => 4B K
+1E31 ḱ => 1E30 Ḱ
+1E32 Ḳ => 4B K
+1E33 ḳ => 1E32 Ḳ
+1E34 Ḵ => 4B K
+1E35 ḵ => 1E34 Ḵ
 1E36 Ḷ => 4C L
 1E37 ḷ => 1E36 Ḷ
 1E38 Ḹ => 1E36 Ḷ
 1E39 ḹ => 1E38 Ḹ
+1E3A Ḻ => 4C L
+1E3B ḻ => 1E3A Ḻ
+1E3C Ḽ => 4C L
+1E3D ḽ => 1E3C Ḽ
 1E3E Ḿ => 4D M
 1E3F ḿ => 1E3E Ḿ
 1E40 Ṁ => 4D M
 1E41 ṁ => 1E40 Ṁ
 1E42 Ṃ => 4D M
 1E43 ṃ => 1E42 Ṃ
+1E44 Ṅ => 4E N
+1E45 ṅ => 1E44 Ṅ
 1E46 Ṇ => 4E N
 1E47 ṇ => 1E46 Ṇ
+1E48 Ṉ => 4E N
+1E49 ṉ => 1E48 Ṉ
+1E4A Ṋ => 4E N
+1E4B ṋ => 1E4A Ṋ
+1E4C Ṍ => D5 Õ
+1E4D ṍ => 1E4C Ṍ
+1E4E Ṏ => D5 Õ
+1E4F ṏ => 1E4E Ṏ
+1E50 Ṑ => 14C Ō
+1E51 ṑ => 1E50 Ṑ
+1E52 Ṓ => 14C Ō
+1E53 ṓ => 1E52 Ṓ
 1E54 Ṕ => 50 P
 1E55 ṕ => 1E54 Ṕ
 1E56 Ṗ => 50 P
@@ -1534,10 +1582,38 @@ F0C ༌ => F0B ་
 1E5D ṝ => 1E5C Ṝ
 1E5E Ṟ => 52 R
 1E5F ṟ => 1E5E Ṟ
+1E60 Ṡ => 53 S
+1E61 ṡ => 1E60 Ṡ
 1E62 Ṣ => 53 S
 1E63 ṣ => 1E62 Ṣ
+1E64 Ṥ => 15A Ś
+1E65 ṥ => 1E64 Ṥ
+1E66 Ṧ => 160 Š
+1E67 ṧ => 1E66 Ṧ
+1E68 Ṩ => 1E62 Ṣ
+1E69 ṩ => 1E68 Ṩ
+1E6A Ṫ => 54 T
+1E6B ṫ => 1E6A Ṫ
 1E6C Ṭ => 54 T
 1E6D ṭ => 1E6C Ṭ
+1E6E Ṯ => 54 T
+1E6F ṯ => 1E6E Ṯ
+1E70 Ṱ => 54 T
+1E71 ṱ => 1E70 Ṱ
+1E72 Ṳ => 55 U
+1E73 ṳ => 1E72 Ṳ
+1E74 Ṵ => 55 U
+1E75 ṵ => 1E74 Ṵ
+1E76 Ṷ => 55 U
+1E77 ṷ => 1E76 Ṷ
+1E78 Ṹ => 168 Ũ
+1E79 ṹ => 1E78 Ṹ
+1E7A Ṻ => 16A Ū
+1E7B ṻ => 1E7A Ṻ
+1E7C Ṽ => 56 V
+1E7D ṽ => 1E7C Ṽ
+1E7E Ṿ => 56 V
+1E7F ṿ => 1E7E Ṿ
 1E80 Ẁ => 57 W
 1E81 ẁ => 1E80 Ẁ
 1E82 Ẃ => 57 W
@@ -1548,9 +1624,27 @@ F0C ༌ => F0B ་
 1E87 ẇ => 1E86 Ẇ
 1E88 Ẉ => 57 W
 1E89 ẉ => 1E88 Ẉ
+1E8A Ẋ => 58 X
+1E8B ẋ => 1E8A Ẋ
+1E8C Ẍ => 58 X
+1E8D ẍ => 1E8C Ẍ
 1E8E Ẏ => 59 Y
 1E8F ẏ => 1E8E Ẏ
+1E90 Ẑ => 5A Z
+1E91 ẑ => 1E90 Ẑ
+1E92 Ẓ => 5A Z
+1E93 ẓ => 1E92 Ẓ
+1E94 Ẕ => 5A Z
+1E95 ẕ => 1E94 Ẕ
+1E96 ẖ => 68 h
+1E97 ẗ => 74 t
+1E98 ẘ => 77 w
 1E99 ẙ => 79 y
+1E9A ẚ => 61 a
+1E9B ẛ => 17F ſ
+1E9C ẜ => 17F ſ
+1E9D ẝ => 17F ſ
+1E9E ẞ => DF ß
 1E9F ẟ => 3B4 δ
 1EA0 Ạ => 41 A
 1EA1 ạ => 1EA0 Ạ
@@ -1592,8 +1686,48 @@ F0C ༌ => F0B ་
 1EC5 ễ => 1EC4 Ễ
 1EC6 Ệ => CA Ê
 1EC7 ệ => 1EC6 Ệ
+1EC8 Ỉ => 49 I
+1EC9 ỉ => 1EC8 Ỉ
+1ECA Ị => 49 I
+1ECB ị => 1ECA Ị
 1ECC Ọ => 4F O
 1ECD ọ => 1ECC Ọ
+1ECE Ỏ => 4F O
+1ECF ỏ => 1ECE Ỏ
+1ED0 Ố => 4F O
+1ED1 ố => 1ED0 Ố
+1ED2 Ồ => 4F O
+1ED3 ồ => 1ED2 Ồ
+1ED4 Ổ => 4F O
+1ED5 ổ => 1ED4 Ổ
+1ED6 Ỗ => 4F O
+1ED7 ỗ => 1ED6 Ỗ
+1ED8 Ộ => 4F O
+1ED9 ộ => 1ED8 Ộ
+1EDA Ớ => 4F O
+1EDB ớ => 1EDA Ớ
+1EDC Ờ => 4F O
+1EDD ờ => 1EDC Ờ
+1EDE Ở => 4F O
+1EDF ở => 1EDE Ở
+1EE0 Ỡ => 4F O
+1EE1 ỡ => 1EE0 Ỡ
+1EE2 Ợ => 4F O
+1EE3 ợ => 1EE2 Ợ
+1EE4 Ụ => 55 U
+1EE5 ụ => 1EE4 Ụ
+1EE6 Ủ => 55 U
+1EE7 ủ => 1EE6 Ủ
+1EE8 Ứ => 55 U
+1EE9 ứ => 1EE8 Ứ
+1EEA Ừ => 55 U
+1EEB ừ => 1EEA Ừ
+1EEC Ử => 55 U
+1EED ử => 1EEC Ử
+1EEE Ữ => 55 U
+1EEF ữ => 1EEE Ữ
+1EF0 Ự => 55 U
+1EF1 ự => 1EF0 Ự
 1EF2 Ỳ => 59 Y
 1EF3 ỳ => 1EF2 Ỳ
 1EF4 Ỵ => 59 Y
@@ -1602,6 +1736,11 @@ F0C ༌ => F0B ་
 1EF7 ỷ => 1EF6 Ỷ
 1EF8 Ỹ => 59 Y
 1EF9 ỹ => 1EF8 Ỹ
+1EFA Ỻ => 4C L
+1EFB ỻ => 1EFA Ỻ
+1EFD ỽ => 1EFC Ỽ
+1EFE Ỿ => 79 y
+1EFF ỿ => 1EFE Ỿ
 
 # Greek Extended
 # Range: 1F00–1FFF
