Revert "Fix inconsistent mapping of Greek η to "n" and sometimes "h""
This reverts commit 8ad4c836987fd04208421990fcb8add9afff5635.

Reason for revert: That Greek character is not an "n". It is the small
version of the Greek letter "Η" (Eta).

The very first rule in equivset.in says: "Case folding. Although letters
of different cases are often visually distinct, they can easily be
confused by people who are familiar with the alphabet. Two words with a
different case may be read as the same word. This is a popular technique
for impersonation."

This is important for people that can read Greek. For example, the Greek
name "Heros" is "ἥρως" in lower and "ἭΡΩΣ" in uppercase and should be
detected as similar. But it currently maps to "NPΩC" and "HPΩΣ". This
doesn't make sense.

This was really a mistake I made in 8ad4c836. Let's just undo it.

Change-Id: I89c204af167e590ab8d738837b7b7cff721689d5

--- a/data/equivset.in
+++ b/data/equivset.in
@@ -611,7 +611,7 @@ FF ÿ => 178 Ÿ
 3AB Ϋ => 178 Ÿ
 3AC ά => 386 Ά
 3AD έ => 388 Έ
-3AE ή => 3B7 η
+3AE ή => 389 Ή
 3AF ί => 38A Ί
 3B0 ΰ => 3CB ϋ
 3B1 α => 391 Α
@@ -620,7 +620,7 @@ FF ÿ => 178 Ÿ
 3B4 δ => 394 Δ
 3B5 ε => 395 Ε
 3B6 ζ => 396 Ζ
-3B7 η => 6E n
+3B7 η => 397 Η
 3B8 θ => 398 Θ
 3B9 ι => 399 Ι
 3BA κ => 39A Κ
@@ -1849,14 +1849,14 @@ F0C ༌ => F0B ་
 1F1B Ἓ => 1F19 Ἑ
 1F1C Ἔ => 1F18 Ἐ
 1F1D Ἕ => 1F19 Ἑ
-1F20 ἠ => 3B7 η
-1F21 ἡ => 3B7 η
-1F22 ἢ => 1F20 ἠ
-1F23 ἣ => 1F21 ἡ
-1F24 ἤ => 1F20 ἠ
-1F25 ἥ => 1F21 ἡ
-1F26 ἦ => 1F20 ἠ
-1F27 ἧ => 1F21 ἡ
+1F20 ἠ => 1F28 Ἠ
+1F21 ἡ => 1F29 Ἡ
+1F22 ἢ => 1F2A Ἢ
+1F23 ἣ => 1F2B Ἣ
+1F24 ἤ => 1F2C Ἤ
+1F25 ἥ => 1F2D Ἥ
+1F26 ἦ => 1F2E Ἦ
+1F27 ἧ => 1F2F Ἧ
 1F28 Ἠ => 397 Η
 1F29 Ἡ => 397 Η
 1F2A Ἢ => 1F28 Ἠ
@@ -1925,8 +1925,8 @@ F0C ༌ => F0B ་
 1F71 ά => 1FBB Ά
 1F72 ὲ => 1FC8 Ὲ
 1F73 έ => 1FC9 Έ
-1F74 ὴ => 3B7 η
-1F75 ή => 3B7 η
+1F74 ὴ => 1FCA Ὴ
+1F75 ή => 1FCB Ή
 1F76 ὶ => 1FDA Ὶ
 1F77 ί => 1FDB Ί
 1F78 ὸ => 1FF8 Ὸ
@@ -1951,14 +1951,14 @@ F0C ༌ => F0B ་
 1F8D ᾍ => 1F89 ᾉ
 1F8E ᾎ => 1F88 ᾈ
 1F8F ᾏ => 1F89 ᾉ
-1F90 ᾐ => 1F20 ἠ
-1F91 ᾑ => 1F21 ἡ
-1F92 ᾒ => 1F90 ᾐ
-1F93 ᾓ => 1F91 ᾑ
-1F94 ᾔ => 1F90 ᾐ
-1F95 ᾕ => 1F91 ᾑ
-1F96 ᾖ => 1F90 ᾐ
-1F97 ᾗ => 1F91 ᾑ
+1F90 ᾐ => 1F98 ᾘ
+1F91 ᾑ => 1F99 ᾙ
+1F92 ᾒ => 1F9A ᾚ
+1F93 ᾓ => 1F9B ᾛ
+1F94 ᾔ => 1F9C ᾜ
+1F95 ᾕ => 1F9D ᾝ
+1F96 ᾖ => 1F9E ᾞ
+1F97 ᾗ => 1F9F ᾟ
 1F98 ᾘ => 1F28 Ἠ
 1F99 ᾙ => 1F29 Ἡ
 1F9A ᾚ => 1F98 ᾘ
@@ -1996,7 +1996,7 @@ F0C ༌ => F0B ་
 1FBB Ά => 1F08 Ἀ
 1FBC ᾼ => 391 Α
 1FC2 ῂ => 1FC3 ῃ
-1FC3 ῃ => 3B7 η
+1FC3 ῃ => 1FCC ῌ
 1FC4 ῄ => 1FC3 ῃ
 1FC6 ῆ => 3B7 η
 1FC7 ῇ => 1FC6 ῆ
