Extend case folding mapping for cherokee letters
Map the lower case to upper case character.
This is not about mapping with visually similiar latin characters

Change-Id: I3ba35054da88dba75a5d6b59845a376df7a8828e

--- a/data/equivset.in
+++ b/data/equivset.in
@@ -1265,9 +1265,12 @@ F0C ༌ => F0B ་
 13F2 Ᏺ => 68 h
 13F3 Ᏻ => 13C0 Ꮐ
 13F4 Ᏼ => 42 B
+13F8 ᏸ => 13F0 Ᏸ
+13F9 ᏹ => 13F1 Ᏹ
 13FA ᏺ => 13F2 Ᏺ
 13FB ᏻ => 13F3 Ᏻ
 13FC ᏼ => 13F4 Ᏼ
+13FD ᏽ => 13F5 Ᏽ
 
 # Unified Canadian Aboriginal Syllabics
 # Range: 1400–167F
@@ -7138,33 +7141,86 @@ AB66 ꭦ => 1F3 ǳ
 # Cherokee Supplement
 # Range: AB70–ABBF
 # https://www.unicode.org/charts/PDF/UAB70.pdf
+AB70 ꭰ => 13A0 Ꭰ
 AB71 ꭱ => 13A1 Ꭱ
+AB72 ꭲ => 13A2 Ꭲ
+AB73 ꭳ => 13A3 Ꭳ
+AB74 ꭴ => 13A4 Ꭴ
 AB75 ꭵ => 13A5 Ꭵ
+AB76 ꭶ => 13A6 Ꭶ
+AB77 ꭷ => 13A7 Ꭷ
+AB78 ꭸ => 13A8 Ꭸ
 AB79 ꭹ => 13A9 Ꭹ
 AB7A ꭺ => 13AA Ꭺ
 AB7B ꭻ => 13AB Ꭻ
 AB7C ꭼ => 13AC Ꭼ
+AB7D ꭽ => 13AD Ꭽ
+AB7E ꭾ => 13AE Ꭾ
+AB7F ꭿ => 13AF Ꭿ
+AB80 ꮀ => 13B0 Ꮀ
 AB81 ꮁ => 13B1 Ꮁ
+AB82 ꮂ => 13B2 Ꮂ
 AB83 ꮃ => 13B3 Ꮃ
+AB84 ꮄ => 13B4 Ꮄ
+AB85 ꮅ => 13B5 Ꮅ
+AB86 ꮆ => 13B6 Ꮆ
 AB87 ꮇ => 13B7 Ꮇ
+AB88 ꮈ => 13B8 Ꮈ
+AB89 ꮉ => 13B9 Ꮉ
+AB8A ꮊ => 13BA Ꮊ
 AB8B ꮋ => 13BB Ꮋ
+AB8C ꮌ => 13BC Ꮌ
 AB8D ꮍ => 13BD Ꮍ
 AB8E ꮎ => 13BE Ꮎ
+AB8F ꮏ => 13BF Ꮏ
 AB90 ꮐ => 13C0 Ꮐ
+AB91 ꮑ => 13C1 Ꮑ
 AB92 ꮒ => 13C2 Ꮒ
 AB93 ꮓ => 13C3 Ꮓ
+AB94 ꮔ => 13C4 Ꮔ
+AB95 ꮕ => 13C5 Ꮕ
+AB96 ꮖ => 13C6 Ꮖ
+AB97 ꮗ => 13C7 Ꮗ
+AB98 ꮘ => 13C8 Ꮘ
+AB99 ꮙ => 13C9 Ꮙ
+AB9A ꮚ => 13CA Ꮚ
+AB9B ꮛ => 13CB Ꮛ
+AB9C ꮜ => 13CC Ꮜ
+AB9D ꮝ => 13CD Ꮝ
 AB9E ꮞ => 13CE Ꮞ
 AB9F ꮟ => 13CF Ꮟ
+ABA0 ꮠ => 13D0 Ꮠ
+ABA1 ꮡ => 13D1 Ꮡ
 ABA2 ꮢ => 13D2 Ꮢ
+ABA3 ꮣ => 13D3 Ꮣ
 ABA4 ꮤ => 13D4 Ꮤ
 ABA5 ꮥ => 13D5 Ꮥ
+ABA6 ꮦ => 13D6 Ꮦ
+ABA7 ꮧ => 13D7 Ꮧ
+ABA8 ꮨ => 13D8 Ꮨ
 ABA9 ꮩ => 13D9 Ꮩ
 ABAA ꮪ => 13DA Ꮪ
+ABAB ꮫ => 13DB Ꮫ
+ABAC ꮬ => 13DC Ꮬ
+ABAD ꮭ => 13DD Ꮭ
 ABAE ꮮ => 13DE Ꮮ
 ABAF ꮯ => 13DF Ꮯ
+ABB0 ꮰ => 13E0 Ꮰ
+ABB1 ꮱ => 13E1 Ꮱ
 ABB2 ꮲ => 13E2 Ꮲ
+ABB3 ꮳ => 13E3 Ꮳ
+ABB4 ꮴ => 13E4 Ꮴ
+ABB5 ꮵ => 13E5 Ꮵ
 ABB6 ꮶ => 13E6 Ꮶ
 ABB7 ꮷ => 64 d
+ABB8 ꮸ => 13E8 Ꮸ
+ABB9 ꮹ => 13E9 Ꮹ
+ABBA ꮺ => 13EA Ꮺ
+ABBB ꮻ => 13EB Ꮻ
+ABBC ꮼ => 13EC Ꮼ
+ABBD ꮽ => 13ED Ꮽ
+ABBE ꮾ => 13EE Ꮾ
+ABBF ꮿ => 13EF Ꮿ
 
 # Small Form Variants
 # Range: FE50–FE6F
