Add case folding mapping for deseret letters
Map the lower case to upper case character.
This is not about mapping with visually similiar latin characters

Change-Id: Idcfb874009586e89f6c6018ee600a577da28f08b

--- a/data/equivset.in
+++ b/data/equivset.in
@@ -7432,6 +7432,50 @@ FFDC ￜ => 3163 ㅣ
 # https://www.unicode.org/charts/PDF/U10330.pdf
 1033C 𐌼 => 4D M
 
+# Deseret
+# Range: 10400–1044F
+# https://www.unicode.org/charts/PDF/U10400.pdf
+10428 𐐨 => 10400 𐐀
+10429 𐐩 => 10401 𐐁
+1042A 𐐪 => 10402 𐐂
+1042B 𐐫 => 10403 𐐃
+1042C 𐐬 => 10404 𐐄
+1042D 𐐭 => 10405 𐐅
+1042E 𐐮 => 10406 𐐆
+1042F 𐐯 => 10407 𐐇
+10430 𐐰 => 10408 𐐈
+10431 𐐱 => 10409 𐐉
+10432 𐐲 => 1040A 𐐊
+10433 𐐳 => 1040B 𐐋
+10434 𐐴 => 1040C 𐐌
+10435 𐐵 => 1040D 𐐍
+10436 𐐶 => 1040E 𐐎
+10437 𐐷 => 1040F 𐐏
+10438 𐐸 => 10410 𐐐
+10439 𐐹 => 10411 𐐑
+1043A 𐐺 => 10412 𐐒
+1043B 𐐻 => 10413 𐐓
+1043C 𐐼 => 10414 𐐔
+1043D 𐐽 => 10415 𐐕
+1043E 𐐾 => 10416 𐐖
+1043F 𐐿 => 10417 𐐗
+10440 𐑀 => 10418 𐐘
+10441 𐑁 => 10419 𐐙
+10442 𐑂 => 1041A 𐐚
+10443 𐑃 => 1041B 𐐛
+10444 𐑄 => 1041C 𐐜
+10445 𐑅 => 1041D 𐐝
+10446 𐑆 => 1041E 𐐞
+10447 𐑇 => 1041F 𐐟
+10448 𐑈 => 10420 𐐠
+10449 𐑉 => 10421 𐐡
+1044A 𐑊 => 10422 𐐢
+1044B 𐑋 => 10423 𐐣
+1044C 𐑌 => 10424 𐐤
+1044D 𐑍 => 10425 𐐥
+1044E 𐑎 => 10426 𐐦
+1044F 𐑏 => 10427 𐐧
+
 # Mathematical Alphanumeric Symbols
 # Range: 1D400–1D7FF
 # https://www.unicode.org/charts/PDF/U1D400.pdf
