More specific Greek mappings without change to the output
This is a direct follow up for If5c6a8a. While the mappings from that
patch are not wrong, I did some of them without consulting the actual
Unicode sources. The source for the new mappings is purely
https://www.unicode.org/charts/PDF/U1F00.pdf

Note how this doesn't change anything in the compiled files. It's
purely cosmetic, to make the input file as precise as possible.

Change-Id: I33f37e8e427463ad0db3a028696033905a1e6a1e

--- a/data/equivset.in
+++ b/data/equivset.in
@@ -1933,8 +1933,8 @@ F0C ༌ => F0B ་
 1F79 ό => 1FF9 Ό
 1F7A ὺ => 1FEA Ὺ
 1F7B ύ => 1FEB Ύ
-1F7C ὼ => 1F61 ὡ
-1F7D ώ => 1F60 ὠ
+1F7C ὼ => 3C9 ω
+1F7D ώ => 3CE ώ
 1F80 ᾀ => 1F88 ᾈ
 1F81 ᾁ => 1F89 ᾉ
 1F82 ᾂ => 1F8A ᾊ
@@ -1945,12 +1945,12 @@ F0C ༌ => F0B ་
 1F87 ᾇ => 1F8F ᾏ
 1F88 ᾈ => 1F08 Ἀ
 1F89 ᾉ => 1F09 Ἁ
-1F8A ᾊ => 1F88 ᾈ
-1F8B ᾋ => 1F89 ᾉ
-1F8C ᾌ => 1F88 ᾈ
-1F8D ᾍ => 1F89 ᾉ
-1F8E ᾎ => 1F88 ᾈ
-1F8F ᾏ => 1F89 ᾉ
+1F8A ᾊ => 1F0A Ἂ
+1F8B ᾋ => 1F0B Ἃ
+1F8C ᾌ => 1F0C Ἄ
+1F8D ᾍ => 1F0D Ἅ
+1F8E ᾎ => 1F0E Ἆ
+1F8F ᾏ => 1F0F Ἇ
 1F90 ᾐ => 1F98 ᾘ
 1F91 ᾑ => 1F99 ᾙ
 1F92 ᾒ => 1F9A ᾚ
@@ -1961,82 +1961,82 @@ F0C ༌ => F0B ་
 1F97 ᾗ => 1F9F ᾟ
 1F98 ᾘ => 1F28 Ἠ
 1F99 ᾙ => 1F29 Ἡ
-1F9A ᾚ => 1F98 ᾘ
-1F9B ᾛ => 1F99 ᾙ
-1F9C ᾜ => 1F98 ᾘ
-1F9D ᾝ => 1F99 ᾙ
-1F9E ᾞ => 1F98 ᾘ
-1F9F ᾟ => 1F99 ᾙ
+1F9A ᾚ => 1F2A Ἢ
+1F9B ᾛ => 1F2B Ἣ
+1F9C ᾜ => 1F2C Ἤ
+1F9D ᾝ => 1F2D Ἥ
+1F9E ᾞ => 1F2E Ἦ
+1F9F ᾟ => 1F2F Ἧ
 1FA0 ᾠ => 1F60 ὠ
 1FA1 ᾡ => 1F61 ὡ
-1FA2 ᾢ => 1FA0 ᾠ
-1FA3 ᾣ => 1FA1 ᾡ
-1FA4 ᾤ => 1FA0 ᾠ
-1FA5 ᾥ => 1FA1 ᾡ
-1FA6 ᾦ => 1FA0 ᾠ
-1FA7 ᾧ => 1FA1 ᾡ
+1FA2 ᾢ => 1F62 ὢ
+1FA3 ᾣ => 1F63 ὣ
+1FA4 ᾤ => 1F64 ὤ
+1FA5 ᾥ => 1F65 ὥ
+1FA6 ᾦ => 1F66 ὦ
+1FA7 ᾧ => 1F67 ὧ
 1FA8 ᾨ => 1F68 Ὠ
 1FA9 ᾩ => 1F69 Ὡ
-1FAA ᾪ => 1FA8 ᾨ
-1FAB ᾫ => 1FA9 ᾩ
-1FAC ᾬ => 1FA8 ᾨ
-1FAD ᾭ => 1FA9 ᾩ
-1FAE ᾮ => 1FA8 ᾨ
-1FAF ᾯ => 1FA9 ᾩ
+1FAA ᾪ => 1F6A Ὢ
+1FAB ᾫ => 1F6B Ὣ
+1FAC ᾬ => 1F6C Ὤ
+1FAD ᾭ => 1F6D Ὥ
+1FAE ᾮ => 1F6E Ὦ
+1FAF ᾯ => 1F6F Ὧ
 1FB0 ᾰ => 1FB8 Ᾰ
 1FB1 ᾱ => 1FB9 Ᾱ
 1FB2 ᾲ => 1F70 ὰ
 1FB3 ᾳ => 1FBC ᾼ
-1FB4 ᾴ => 1F71 ά
+1FB4 ᾴ => 3AC ά
 1FB6 ᾶ => 3B1 α
 1FB7 ᾷ => 1FB6 ᾶ
-1FB8 Ᾰ => 102 Ă
-1FB9 Ᾱ => 100 Ā
-1FBA Ὰ => 1F09 Ἁ
-1FBB Ά => 1F08 Ἀ
+1FB8 Ᾰ => 391 Α
+1FB9 Ᾱ => 391 Α
+1FBA Ὰ => 391 Α
+1FBB Ά => 386 Ά
 1FBC ᾼ => 391 Α
-1FC2 ῂ => 1FC3 ῃ
+1FC2 ῂ => 1F74 ὴ
 1FC3 ῃ => 1FCC ῌ
-1FC4 ῄ => 1FC3 ῃ
+1FC4 ῄ => 3AE ή
 1FC6 ῆ => 3B7 η
 1FC7 ῇ => 1FC6 ῆ
 1FC8 Ὲ => 395 Ε
-1FC9 Έ => 395 Ε
+1FC9 Έ => 388 Έ
 1FCA Ὴ => 397 Η
-1FCB Ή => 397 Η
+1FCB Ή => 389 Ή
 1FCC ῌ => 397 Η
 1FD0 ῐ => 1FD8 Ῐ
 1FD1 ῑ => 1FD9 Ῑ
-1FD2 ῒ => 1F76 ὶ
-1FD3 ΐ => 1F77 ί
+1FD2 ῒ => 3CA ϊ
+1FD3 ΐ => 390 ΐ
 1FD6 ῖ => 3B9 ι
-1FD7 ῗ => 1FD6 ῖ
+1FD7 ῗ => 3CA ϊ
 1FD8 Ῐ => 399 Ι
 1FD9 Ῑ => 399 Ι
 1FDA Ὶ => 399 Ι
-1FDB Ί => 399 Ι
+1FDB Ί => 38A Ί
 1FE0 ῠ => 1FE8 Ῠ
 1FE1 ῡ => 1FE9 Ῡ
-1FE2 ῢ => 1F7A ὺ
-1FE3 ΰ => 1F7B ύ
+1FE2 ῢ => 3CB ϋ
+1FE3 ΰ => 3B0 ΰ
 1FE4 ῤ => 3C1 ρ
 1FE5 ῥ => 1FEC Ῥ
 1FE6 ῦ => 3C5 υ
-1FE7 ῧ => 1FE6 ῦ
+1FE7 ῧ => 3CB ϋ
 1FE8 Ῠ => 3A5 Υ
 1FE9 Ῡ => 3A5 Υ
 1FEA Ὺ => 3A5 Υ
-1FEB Ύ => 3A5 Υ
+1FEB Ύ => 38E Ύ
 1FEC Ῥ => 3A1 Ρ
-1FF2 ῲ => 1FF3 ῳ
+1FF2 ῲ => 1F7C ὼ
 1FF3 ῳ => 3C9 ω
-1FF4 ῴ => 1FF3 ῳ
+1FF4 ῴ => 3CE ώ
 1FF6 ῶ => 3C9 ω
 1FF7 ῷ => 1FF6 ῶ
-1FF8 Ὸ => 1F49 Ὁ
-1FF9 Ό => 1F48 Ὀ
-1FFA Ὼ => 1F69 Ὡ
-1FFB Ώ => 1F68 Ὠ
+1FF8 Ὸ => 39F Ο
+1FF9 Ό => 38C Ό
+1FFA Ὼ => 3A9 Ω
+1FFB Ώ => 38F Ώ
 1FFC ῼ => 3A9 Ω
 
 # General Punctuation
