Fix inconsistent mapping of Cherokee letter Tsu
I believe this was just a mistake.

Cherokee traditionally doesn't have capitalization. That's why the
Unicode group for the small letters is so far away, and why the
letters look exactly the same, just smaller.

Because of this it really doesn't make sense to use different
mappings for the two versions.

While I can see how "stroke down and bending to the left" can be
used to describe both the shape of the Cherokee Ꮷ and the uppercase
J, the bend in Ꮷ forms a closed circle, but J does not.

Mapping it to d makes much more sense, in my opinion. Note how the
small version was already mapped to d.

Change-Id: I0cf3e0940caa42632310e07c830f225823b2dfbc

--- a/data/equivset.in
+++ b/data/equivset.in
@@ -1278,7 +1278,7 @@ F0C ༌ => F0B ་
 13DF Ꮯ => 43 C
 13E2 Ꮲ => 50 P
 13E6 Ꮶ => 4B K
-13E7 Ꮷ => 4A J
+13E7 Ꮷ => 64 d
 13F2 Ᏺ => 68 h
 13F3 Ᏻ => 13C0 Ꮐ
 13F4 Ᏼ => 42 B
@@ -7276,7 +7276,7 @@ ABB3 ꮳ => 13E3 Ꮳ
 ABB4 ꮴ => 13E4 Ꮴ
 ABB5 ꮵ => 13E5 Ꮵ
 ABB6 ꮶ => 13E6 Ꮶ
-ABB7 ꮷ => 64 d
+ABB7 ꮷ => 13E7 Ꮷ
 ABB8 ꮸ => 13E8 Ꮸ
 ABB9 ꮹ => 13E9 Ꮹ
 ABBA ꮺ => 13EA Ꮺ
