Drop obsolete UTFNormal dependency
One method is already deprecated. Just use mb_ord.

The other method doesn't really do anything. Only a check if mb_chr
returns false. This is not relevant in this context. The code will
fail anyway when mb_chr returns false.

Change-Id: I19be3f0386261ba35c2373a49a32b3d42a3f5930

--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
 		}
 	},
 	"require": {
-		"php": ">=7.4.3",
-		"wikimedia/utfnormal": "^3.0.1 || ^4.0.0"
+		"php": ">=7.4.3"
 	},
 	"require-dev": {
 		"ext-json": "*",
