Map old Coptic letters to the Greek range
Note how the order is almost the exact same in both ranges, starting
with 2C80 Ⲁ (ALFA) = 391 Α (ALPHA), and so on.

I'm intentionally turning some mappings around from lower→uppercase
to upper→lowercase when the old Coptic letter looks much more like
the lowercase Greek letter. This doesn't make a difference in the
output.

Change-Id: I39938f7208503cad769d5a170b591dd52d26f56e

--- a/data/equivset.in
+++ b/data/equivset.in
@@ -2550,32 +2550,56 @@ F0C ༌ => F0B ་
 # Coptic
 # Range: 2C80–2CFF
 # https://www.unicode.org/charts/PDF/U2C80.pdf
+2C80 Ⲁ => 391 Α
 2C81 ⲁ => 2C80 Ⲁ
+2C82 Ⲃ => 392 Β
 2C83 ⲃ => 2C82 Ⲃ
+2C84 Ⲅ => 393 Γ
 2C85 ⲅ => 2C84 Ⲅ
+2C86 Ⲇ => 394 Δ
 2C87 ⲇ => 2C86 Ⲇ
-2C89 ⲉ => 2C88 Ⲉ
+2C88 Ⲉ => 2C89 ⲉ
+2C89 ⲉ => 3B5 ε
+2C8A Ⲋ => 3DA Ϛ
 2C8B ⲋ => 2C8A Ⲋ
+2C8C Ⲍ => 396 Ζ
 2C8D ⲍ => 2C8C Ⲍ
+2C8E Ⲏ => 397 Η
 2C8F ⲏ => 2C8E Ⲏ
-2C91 ⲑ => 2C90 Ⲑ
+2C90 Ⲑ => 2C91 ⲑ
+2C91 ⲑ => 3B8 θ
+2C92 Ⲓ => 399 Ι
 2C93 ⲓ => 2C92 Ⲓ
+2C94 Ⲕ => 39A Κ
 2C95 ⲕ => 2C94 Ⲕ
-2C97 ⲗ => 2C96 Ⲗ
-2C98 Ⲙ => 4D M
+2C96 Ⲗ => 2C97 ⲗ
+2C97 ⲗ => 3BB λ
+2C98 Ⲙ => 39C Μ
 2C99 ⲙ => 2C98 Ⲙ
+2C9A Ⲛ => 39D Ν
 2C9B ⲛ => 2C9A Ⲛ
-2C9D ⲝ => 2C9C Ⲝ
+2C9C Ⲝ => 2C9D ⲝ
+2C9D ⲝ => 3BE ξ
+2C9E Ⲟ => 39F Ο
 2C9F ⲟ => 2C9E Ⲟ
+2CA0 Ⲡ => 3A0 Π
 2CA1 ⲡ => 2CA0 Ⲡ
+2CA2 Ⲣ => 3A1 Ρ
 2CA3 ⲣ => 2CA2 Ⲣ
+2CA4 Ⲥ => 3F9 Ϲ
 2CA5 ⲥ => 2CA4 Ⲥ
+2CA6 Ⲧ => 3A4 Τ
 2CA7 ⲧ => 2CA6 Ⲧ
+2CA8 Ⲩ => 3A5 Υ
 2CA9 ⲩ => 2CA8 Ⲩ
+2CAA Ⲫ => 3A6 Φ
 2CAB ⲫ => 2CAA Ⲫ
+2CAC Ⲭ => 3A7 Χ
 2CAD ⲭ => 2CAC Ⲭ
+2CAE Ⲯ => 3A8 Ψ
 2CAF ⲯ => 2CAE Ⲯ
-2CB1 ⲱ => 2CB0 Ⲱ
+2CB0 Ⲱ => 2CB0 Ⲱ
+2CB1 ⲱ => 3C9 ω
 
 # Georgian Supplement
 # Range: 2D00–2D2F
