Add missing lower→uppercase in the Hiragana/Katakana ranges
Two different kinds of mappings are happening here:
* Small to normal-size letters. Note that only some letters in
  these ranges have a small variant.
* Modified to unmodified letters.

This is all strictly following what is described in the Unicode
charts:
https://www.unicode.org/charts/PDF/U3040.pdf
https://www.unicode.org/charts/PDF/U30A0.pdf

Change-Id: Ia19dbf7a5c0c0f12ac76cd70d514d4f1e7bf74d7

--- a/data/equivset.in
+++ b/data/equivset.in
@@ -2666,10 +2666,96 @@ F0C ༌ => F0B ་
 # https://www.unicode.org/charts/PDF/U3000.pdf
 3007 〇 => 0030 0
 
+# Hiragana
+# Range: 3040–309F
+# https://www.unicode.org/charts/PDF/U3040.pdf
+3041 ぁ => 3042 あ
+3043 ぃ => 3044 い
+3045 ぅ => 3046 う
+3047 ぇ => 3048 え
+3049 ぉ => 304A お
+304C が => 304B か
+304E ぎ => 304D き
+3050 ぐ => 304F く
+3052 げ => 3051 け
+3054 ご => 3053 こ
+3056 ざ => 3055 さ
+3058 じ => 3057 し
+305A ず => 3059 す
+305C ぜ => 305B せ
+305E ぞ => 305D そ
+3060 だ => 305F た
+3062 ぢ => 3061 ち
+3063 っ => 3064 つ
+3065 づ => 3064 つ
+3067 で => 3066 て
+3069 ど => 3068 と
+3070 ば => 306F は
+3071 ぱ => 306F は
+3073 び => 3072 ひ
+3074 ぴ => 3072 ひ
+3076 ぶ => 3075 ふ
+3077 ぷ => 3075 ふ
+3079 べ => 3078 へ
+307A ぺ => 3078 へ
+307C ぼ => 307B ほ
+307D ぽ => 307B ほ
+3083 ゃ => 3084 や
+3085 ゅ => 3086 ゆ
+3087 ょ => 3088 よ
+308E ゎ => 308F わ
+3094 ゔ => 3046 う
+3095 ゕ => 304B か
+3096 ゖ => 3051 け
+309E ゞ => 309D ゝ
+
 # Katakana
 # Range: 30A0–30FF
 # https://www.unicode.org/charts/PDF/U30A0.pdf
+30A1 ァ => 30A2 ア
+30A3 ィ => 30A4 イ
+30A5 ゥ => 30A6 ウ
+30A7 ェ => 30A8 エ
+30A9 ォ => 30AA オ
+30AC ガ => 30AB カ
+30AE ギ => 30AD キ
+30B0 グ => 30AF ク
+30B2 ゲ => 30B1 ケ
+30B4 ゴ => 30B3 コ
+30B6 ザ => 30B5 サ
+30B8 ジ => 30B7 シ
+30BA ズ => 30B9 ス
+30BC ゼ => 30BB セ
+30BE ゾ => 30BD ソ
+30C0 ダ => 30BF タ
+30C2 ヂ => 30C1 チ
+30C3 ッ => 30C4 ツ
+30C5 ヅ => 30C4 ツ
+30C7 デ => 30C6 テ
+30C9 ド => 30C8 ト
+30D0 バ => 30CF ハ
+30D1 パ => 30CF ハ
+30D3 ビ => 30D2 ヒ
+30D4 ピ => 30D2 ヒ
+30D6 ブ => 30D5 フ
+30D7 プ => 30D5 フ
 30D8 ヘ => 3078 へ
+30D9 ベ => 30D8 ヘ
+30DA ペ => 30D8 ヘ
+30DC ボ => 30DB ホ
+30DD ポ => 30DB ホ
+30E3 ャ => 30E4 ヤ
+30E5 ュ => 30E6 ユ
+30E7 ョ => 30E8 ヨ
+30EE ヮ => 30EF ワ
+30F4 ヴ => 30A6 ウ
+30F5 ヵ => 30AB カ
+30F6 ヶ => 30B1 ケ
+30F7 ヷ => 30EF ワ
+30F8 ヸ => 30F0 ヰ
+30F9 ヹ => 30F1 ヱ
+30FA ヺ => 30F2 ヲ
+30FE ヾ => 30FD ヽ
 
 # Hangul Compatibility Jamo
 # Range: 3130–318F
